Initial delta from 21 main line